[project]
name = "cigar-shop-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "chainlit>=2.11.1",
    "crewai[tools]>=1.14.0",
    "duckdb>=1.5.3",
    "gradio>=5.0.0",
    "mcp>=1.5.0",
    "openpyxl>=3.1.0",
    "pandas>=3.0.3",
]
