[project]
name = "cigar-shop-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "chainlit>=2.11.1",
    "chromadb>=0.6.0",
    "duckdb>=1.5.3",
    "mcp>=1.5.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "pandas>=3.0.3",
    "plotly>=5.20.0",
    "reportlab>=4.2.0",
    "sentence-transformers>=3.0.0",
]
